@@ -316,6 +316,9 @@ Unreleased changes (1.0-dev)
 
 118. NUTCH-681 - parse-mp3 compilation problem. 
                  (Wildan Maulana via dogacan)
+
+119. NUTCH-676 - MapWritable is written inefficiently and confusingly.
+                 (dogacan)
      
 Release 0.9 - 2007-04-02
 
